Cambio de data y menu 	- Se cambia componente Link por NavLink 	- Se agrega estilo para link activo 	- Se agrega avatar a datos mockeados 	- Se crea carpeta de assets para componentes

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 #component{
     border: 1px solid black;
 }
+
+.active{
+    border-bottom: 1.4px solid white;
+}
+.kissImg{
+    width: 2em ;
+    margin-left: 1em;
+}
